<resources>
    <string name="app_name">Change Detection</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>

    <string name="inputName">Type the title</string>
    <string name="inputUrl">Type the url</string>
    <string name="syncing">Syncing…</string>
    <string name="success_copied">Copied</string>
    <string name="nothing_yet">nothing yet</string>

    <string name="version">Version</string>
    <string name="licenses">Licenses</string>
    <string name="rate">Rate the app</string>

    <string name="email">Send an email</string>
    <string name="help">Help</string>
    <string name="email_subject">Change Detection feedback</string>
    <string name="github">Fork on GitHub</string>
    <string name="bugs">Bugs? Questions? Feedback?</string>

    <string name="remove">Remove</string>
    <string name="remove_more">Remove…</string>

    <string name="remove_all">Remove all</string>
    <string name="pruning">Keep only the last 5 items</string>

    <string name="edittitle">Edit Tracking</string>
    <string name="editsubtitle">Edit a website that is being tracked</string>

    <string name="addtitle">New Tracking</string>
    <string name="addsubtitle">Add a website to be tracked</string>

    <string name="edit">Edit</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="sync_disable">Disable sync</string>
    <string name="sync_enable">Enable sync</string>

    <string name="notification_disable">Disable notifications</string>
    <string name="notification_enable">Enable notifications</string>

    <string name="reload">Reload</string>

    <string name="error">ERROR</string>
    <string name="author">Author</string>
    <string name="icon_designer">Icon Designer (Famil Qasimov)</string>

    <string name="less_than_two">Error! Can\'t show the difference with less than two items.</string>
    <string name="empty_please_select_two">Select two snapshots below\nto compare the differences</string>
    <string name="empty_no_change_detected">No change detected between these two snapshots</string>

    <string name="remove_this">Remove %1s</string>
    <string name="remove_content">Are you sure you would like to remove this?</string>

    <string name="are_you_sure">Are you sure you want to remove %1s from %2s?</string>
    <string name="missing_internet">Error! Missing internet connection</string>
    <string name="was_updated">%1s was updated!</string>

    <string name="url">Website Url</string>
    <string name="title">Title</string>

    <string name="wifi_on">Wifi On</string>
    <string name="turn_on_background_sync_title">Turn on background sync</string>
    <string name="turn_on_background_sync_content">Background sync is turned off. Would you like to turn it on? You can customize it on Settings</string>
    <string name="background_sync">Background Sync</string>
    <string name="sync_interval">Sync Interval</string>

    <string name="constraints">Constraints</string>
    <string name="device_idle">Device Idle</string>
    <string name="charging">Charging</string>
    <string name="batter_not_low">Battery not low</string>

    <string name="min">min</string>
    <string name="hour">1 hour</string>
    <string name="hours">hours</string>

    <string name="original_plus_diffs">Original + Changes</string>
    <string name="revised">Revised</string>
    <string name="original">Original</string>
    <string name="source">Source</string>
    <string name="diff">Diff</string>

    <string name="incorrect_url">Incorrect URL</string>
    <string name="no_websites_being_monitored">No websites are being monitored</string>

    <string name="one_x" translatable="false">1x</string>
    <string name="two_x" translatable="false">2x</string>
    <string name="three_x" translatable="false">3x</string>
    <string name="four_x" translatable="false">4x</string>
    <string name="five_x" translatable="false">5x</string>
    <string name="shared_transition" translatable="false">shared_transition</string>

    <string name="control_bar_quality">High Quality</string>
    <string name="share">Share</string>
    <string name="no_changes_detected">No changes detected</string>

    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>

    <string name="last_change">Last Change</string>
    <string name="last_sync">Last Sync</string>

    <plurals name="items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <string name="change_detected_notification_with_title">%1s (%2s) was updated!</string>
    <string name="change_detected_notification_without_title">Change detected! (%1s)</string>

    <string name="sort_by_name">Sort by name</string>
    <string name="dot" translatable="false">•</string>
    <string name="disable_dark_mode">Disable dark mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="backup">Backup</string>
    <string name="bkp_export">Export</string>
    <string name="bkp_import">Import</string>
    <string name="bkp_description">You can save a copy of the sites you are currently tracking, or restore from an existing backup. Only data, such as title, url, color and preferences are kept. You may save/restore from a range of options, including Google Drive and Android\'s internal storage. </string>

    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="sync_every">Sync every %d %s</string>

    <string name="sync_disabled">Sync is disabled</string>

    <string name="background_sync_description">Periodically check if targetSDK changed, since apps are always being updated.</string>
    <string name="home">Home</string>
    <string name="logs">Logs</string>

    <string-array name="pluralTime">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>

    <string-array name="singularTime">
        <item>minute</item>
        <item>hour</item>
        <item>day</item>
    </string-array>

    <string name="empty_logs">No changes detected</string>
    <string name="update_threshold">Update threshold</string>
    <string name="about_title" translatable="false">Change Detection v%1$s</string>
    <string name="about_body"><![CDATA[
        Designed &amp; developed by <b>Bernardo Ferrari</b>.<br/>
        <a href=\'https://github.com/bernaferrari\'>GitHub</a>&nbsp;&nbsp;
        <a href=\'https://www.reddit.com/user/bernaferrari\'>Reddit</a>&nbsp;&nbsp;
        <a href=\'https://www.linkedin.com/in/bernaferrari\'>LinkedIn</a><br/><br/>
        This project is <a href=\'https://github.com/bernaferrari/ChangeDetection\'>open source</a>, and is
        licensed under Apache 2.0.</a>
  ]]></string>
    <string name="contact">Contact</string>
    <string name="dismiss">Dismiss</string>

</resources>
