<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/controlBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingTop="8dp"
            android:paddingRight="4dp"
            android:paddingBottom="8dp">

            <com.bernaferrari.changedetection.ui.ControlBarItemToggleView
                android:id="@+id/highQualityToggle"
                style="@style/ControlBarItem"
                app:src="@drawable/ic_expand"
                app:text="@string/control_bar_quality" />

            <com.bernaferrari.changedetection.ui.ControlBarItemToggleView
                android:id="@+id/showOriginalAndChanges"
                style="@style/ControlBarItem"
                app:src="@drawable/ic_vector_difference"
                app:text="@string/original_plus_diffs" />

            <com.bernaferrari.changedetection.ui.ControlBarItemToggleView
                android:id="@+id/shareToggle"
                style="@style/ControlBarItem"
                app:src="@drawable/ic_share"
                app:text="@string/share" />

            <com.bernaferrari.changedetection.ui.ControlBarItemToggleView
                android:id="@+id/openBrowserToggle"
                style="@style/ControlBarItem"
                app:src="@drawable/ic_open_browser"
                app:text="@string/open_in_browser" />

        </LinearLayout>

    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lottie_divider_height"
        android:layout_gravity="bottom"
        android:background="?lottieDivider" />

</FrameLayout>
