<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/controlBarDiff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?toolbarColor">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingTop="8dp"
            android:paddingRight="4dp"
            android:paddingBottom="8dp">

            <com.bernaferrari.changedetection.ui.ControlBarItemToggleView
                android:id="@+id/diff"
                style="@style/ControlBarItem"
                app:text="@string/diff" />

            <com.bernaferrari.changedetection.ui.ControlBarItemToggleView
                android:id="@+id/revisedToggle"
                style="@style/ControlBarItem"
                app:text="@string/revised" />

            <com.bernaferrari.changedetection.ui.ControlBarItemToggleView
                android:id="@+id/originalToggle"
                style="@style/ControlBarItem"
                app:text="@string/original" />

        </LinearLayout>

    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lottie_divider_height"
        android:layout_gravity="bottom"
        android:background="?lottieDivider" />

</FrameLayout>
